cluster/core/authentication-system/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authentication-system
  labels:
    app.kubernetes.io/name: authelia
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  dependsOn:
    - name: pgo-cluster
      namespace: default
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:4.37.3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 1m
              memory: 50Mi
          command:
            - sh
            - -c
            - authelia --config /config/configuration.yaml
          ports:
            - name: http
              protocol: TCP
              containerPort: 9091
          volumeMounts:
            - name: authelia-config
              mountPath: /config
              readOnly: true
            - name: authelia-secrets
              mountPath: /app/secrets
              readOnly: true
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      enableServiceLinks: false
      dnsPolicy: ClusterFirst
      volumes:
        - name: authelia-config
          configMap:
            name: authelia-configs
        - name: authelia-secrets
          secret:
            secretName: authelia-secrets
            items:
              - key: authelia_jwt_secret
                path: jwt_secret
              - key: authelia_duo_api_secret_key
                path: duo_api_secret_key
              - key: authelia_session_secret
                path: session_secret
              - key: authelia_notifier_smtp_password
                path: notifier_smtp_password
              - key: authelia_session_redis_password
                path: session_redis_password
              - key: authelia_storage_postgres_password
                path: storage_postgres_password
